# prop_solveur

./: CHANGELOG.md  LICENSE  README.md  flake.nix  haskell-1st-order-logic.cabal  prop-solveur.cabal  shell.nix  stack.yaml  text.txt
app/: Main.hs  Parser.hs  Solver.hs
src/: Main.hs  Parser.hs  Solver.hs  Types.hs
test/: Main.hs  ParserSpec.hs
