cabal-version:      2.4
name:               prop-solveur
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Léana 江
maintainer:         leana.jiang@icloud.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable prop-solveur
  hs-source-dirs:   app
  default-language: Haskell2010
  main-is:          Main.hs
  other-modules:
    Parser
    Solver
    Types

  build-depends:
    , base
    , containers
    , megaparsec
    , parser-combinators
    , ansi-terminal
    , pretty-simple

test-suite prop-solveur-spec
  hs-source-dirs:   test app
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Solver
    Types
    Parser
    ParserSpec

  build-depends:
    , base
    , containers
    , megaparsec
    , parser-combinators
    , QuickCheck
    , hspec
