cabal-version:      2.4
name:               prop-solveur
version:            0.1.0.0
author:             Léana 江
maintainer:         leana.jiang@icloud.com
extra-source-files: README.md

library
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    , ansi-terminal       >=0.11.5
    , base                >=4.17
    , containers          >=0.6
    , megaparsec          >=9.3.1
    , parser-combinators  >=1.3.0
    , pretty-simple       >=4.1.2.0

  exposed-modules:
    Parser
    Solver
    Types

executable prop-solveur
  default-language: Haskell2010
  main-is:          src/Main.hs
  build-depends:
    , ansi-terminal
    , base
    , containers
    , megaparsec
    , parser-combinators
    , pretty-simple
    , prop-solveur

test-suite prop-solveur-spec
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:    ParserSpec
  build-depends:
    , ansi-terminal
    , base
    , containers
    , hspec               >=2.10.10
    , hspec-megaparsec    >=2.2.0
    , megaparsec
    , parser-combinators
    , pretty-simple
    , prop-solveur
    , QuickCheck          >=2.14.3
