cabal-version:      2.4
name:               prop-solveur
version:            0.1.0.0
author:             Léana 江
maintainer:         leana.jiang@icloud.com
extra-source-files: README.md

common common
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-patterns -Wincomplete-uni-patterns
    -Wredundant-constraints -fwarn-unused-imports -fwarn-name-shadowing

  build-depends:
    , ansi-terminal       >=0.11.5
    , base                >=4.17
    , containers          >=0.6
    , megaparsec          >=9.3.1
    , parser-combinators  >=1.3.0
    , pretty-simple       >=4.1.2.0
    , text >= 2.0.2

  default-extensions:
    OverloadedStrings

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    Parser
    Solver
    Types

executable prop-solveur
  import:        common
  main-is:       src/Main.hs
  build-depends: prop-solveur

test-suite prop-solveur-spec
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:  ParserSpec
  build-depends:
    , hspec             >=2.10.10
    , hspec-megaparsec  >=2.2.0
    , prop-solveur
    , QuickCheck        >=2.14.3
